@@ -104,11 +104,14 @@
 		</dependency>
 
 		<!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+		<!-- Sa-Token 权限认证 -->
+		<!-- Sa-Token 权限认证 -->
 		<dependency>
 			<groupId>cn.dev33</groupId>
 			<artifactId>sa-token-spring-boot3-starter</artifactId>
-			<version>1.34.0</version>
+			<version>1.38.0</version>
 		</dependency>
+
 
 	</dependencies>
 
@@ -117,6 +120,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
